Stretch grid boxes and fix reset button
Reset button failed to work on default grid setup due to being nested
in a function. The fix was moving the storing of the reset button
onclick behavior outside of the function.

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ html {
     justify-content: center;
     align-items: center;
     border-style: double;
+
 }
 
 .input_area{
@@ -28,24 +29,22 @@ html {
 
 #grid_container{
     border-style: solid;
-    padding: 15px;
-    margin: 15px;
-    width: 75%;
-    height: 500px
+    display: flex;
+    margin: 5px;
+    width: 90%;
+    height:auto;
+    min-height: 500px;
 }
+
 .grid, 
 .grid_black{
     border-style: solid;
     border-width: 1px;
     display: flex;
-    flex: auto;
-    justify-content: space-around;
-    align-items: space-around;
-    min-width: 5px;
-    min-height: 5px;
-    padding: 5px;
     flex-direction: row;
-    flex: 1 1 0px;
+    min-width: 2px;
+    min-height: 2px;
+    flex: auto;
     }
 
 .grid_black{
@@ -54,8 +53,7 @@ html {
 
 .grid_row{
     display: flex;
-    justify-content: stretch;
-    align-items: stretch;
+    flex-direction: column;
     flex: auto;
 }
 
